# Mooncake

./: .gitignore
benchmarks/: gds_baseline_collector.py  gds_lease_refresh_probe.py  test_gds_baseline_collector.py  test_gds_lease_refresh_probe.py  test_vllm_warmup.py  vllm_warmup.py
benchmarks/xypd_benchmarks/vllm-benchmarks/: benchmarks.sh
docs/source/design/gds-ssd/: spec.md
docs/source/performance/: vllm-v1-support-benchmark.md
docs/superpowers/plans/: 2026-07-23-gds-operation-scheduler.md
docs/superpowers/specs/: 2026-07-23-gds-operation-scheduler-design.md
mooncake-integration/: CMakeLists.txt
mooncake-integration/store/: store_py.cpp  store_py_internal.h  store_py_parallel_write.h
mooncake-store/benchmarks/: CMakeLists.txt  gds_store_bench.cpp  run_gds_store_bench.sh
mooncake-store/include/: allocator.h  client_metric.h  master_client.h  master_metric_manager.h  master_service.h  replica.h  rpc_service.h  segment.h  transfer_task.h  types.h
mooncake-store/src/: allocator.cpp  client_buffer.cpp  client_metric.cpp  client_service.cpp  master_admin_service.cpp  master_client.cpp  master_metric_manager.cpp  master_service.cpp  real_client.cpp  rpc_service.cpp  segment.cpp  transfer_task.cpp
mooncake-store/src/serialize/: serializer.cpp
mooncake-store/tests/: client_buffer_test.cpp  client_metrics_test.cpp  master_metrics_test.cpp  master_service_ssd_test.cpp  master_service_tenant_quota_test.cpp  master_service_test.cpp  promotion_on_hit_test.cpp  segment_test.cpp  serializer_test.cpp  transfer_task_test.cpp
mooncake-store/tests/ha/snapshot/: master_service_promotion_test_for_snapshot.cpp  master_service_ssd_test_for_snapshot.cpp  master_service_test_for_snapshot.cpp  master_service_test_for_snapshot_base.h  snapshot_child_process_test.cpp
mooncake-transfer-engine/src/: CMakeLists.txt
mooncake-transfer-engine/tent/config/: tent-gds-baseline.json  tent-gds-weighted.json  tent-gds.json
mooncake-transfer-engine/tent/src/: transfer_engine.cpp
mooncake-transfer-engine/tent/src/metrics/: tent_metrics.cpp
mooncake-transfer-engine/tent/tests/: CMakeLists.txt  admission_queue_operation_test.cpp  admission_queue_test.cpp  gds_block_io_test.cpp  gds_fifo_dispatch_test.cpp  gds_operation_scheduler_test.cpp  runtime_operation_timeline_test.cpp  runtime_queue_dispatch_test.cpp  transport_selector_test.cpp
mooncake-wheel/mooncake/: mooncake_gds_ssd_register.py
mooncake-wheel/tests/: test_gds_ssd_register.py
(+18 files in other folders)
